<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="cv_welcome">Welcome</string>
    <string name="cv_enter_your_name">Please enter your name!</string>
    <string name="hint_name">Name</string>
    <string name="btn_start">Start</string>
    <string name="toast_enteryourname">Please enter your name!</string>
    <string name="what_country_question">What country does this flag belong to?</string>
    <string name="quiz_image">Quiz Image</string>
</resources>