<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_quiz_app"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_textview_cardview"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_cv"
        android:layout_marginEnd="@dimen/margin_cv"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/cv_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_linear_layout_activity_main"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cv_welcome"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/ts_welcome"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cv_enter_your_name"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/ts_enter_your_name"
                android:layout_marginTop="@dimen/margin_cv_title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/margin_cv">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/light_grey"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_cv_title"
                android:background="@color/design_default_color_primary"
                android:text="@string/btn_start"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_btn_start"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>